Update PackageMojo.java